improving path and swagger documentation
