# main.go
@@ -43,6 +43,11 @@ func init() {
 
 }
 
+// @title BBQueue API
+// @version 1.0
+// @description A simple queue service
+// @host 127.0.0.1:8080
+// @BasePath /
 func main() {
 	gin.SetMode(gin.ReleaseMode)
 	router := gin.New()
@@ -65,11 +70,21 @@ func main() {
 func setupEndpoints(RestApi *gin.Engine) {
 	RestApi.GET("/queue", serverGet)
 	RestApi.POST("/queue", serverPost)
-	RestApi.DELETE("/queue/:key", serverDelete)
-	RestApi.GET("/queue/:key", serverGetKey)
+	RestApi.DELETE("/processing/:key", serverDelete)
+	RestApi.GET("/processing/:key", serverGetKey)
 	RestApi.GET("/docs/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 }
 
+// @summary Get the first message in the queue
+// @description Returns the first message in the front of the queue, including the timeout the message can stay in processing in seconds.
+// @tags Queue
+// @accept json
+// @produce json
+// @param Timeout-Key header int true "Timeout in seconds"
+// @success 200 {string} string "Ok"
+// @failure 400 {string} string "Bad Request"
+// @failure 204 {string} string "Queue is empty"
+// @router /queue [get]
 func serverGet(c *gin.Context) {
 	timeoutString := c.Request.Header.Get(TimeoutKey)
 	timeoutSec, err := strconv.Atoi(timeoutString)
@@ -88,6 +103,15 @@ func serverGet(c *gin.Context) {
 	c.Data(http.StatusOK, contentTypeJSON, []byte(message))
 }
 
+// @summary Add a message to the queue
+// @description Adds the message contained on the body of the request to the end of the queue.
+// @tags Queue
+// @accept json
+// @produce json
+// @param message body string true "Message to add to the queue"
+// @success 200 {string} string "Message added successfully"
+// @failure 500 {string} string "Failed to read request body"
+// @router /queue [post]
 func serverPost(c *gin.Context) {
 	message, err := io.ReadAll(c.Request.Body)
 	if err != nil {
@@ -101,6 +125,16 @@ func serverPost(c *gin.Context) {
 	}
 }
 
+// @summary Delete a specific message
+// @description Deletes a message with the same key as the one passed on the requested URL
+// @tags Queue
+// @accept json
+// @produce json
+// @param key path string true "Key of the message to delete"
+// @success 200 {string} string "Message deleted successfully"
+// @failure 404 {string} string "Key not found"
+// @failure 500 {string} string "Error deleting message"
+// @router /processing/{key} [delete]
 func serverDelete(c *gin.Context) {
 	key, err := uuid.Parse(c.Param("key"))
 	if err != nil {
@@ -112,6 +146,16 @@ func serverDelete(c *gin.Context) {
 	}
 }
 
+// @summary Get a specific message
+// @description Gets the message from the in-processing with the same key as the one passed on the requested URL
+// @tags Queue
+// @accept json
+// @produce json
+// @param key path string true "Key of the message to return"
+// @success 200 {string} string "Ok"
+// @failure 404 {string} string "Key not found"
+// @failure 204 {string} string "Queue is empty"
+// @router /processing/{key} [get]
 func serverGetKey(c *gin.Context) {
 	key, err := uuid.Parse(c.Param("key"))
 	if err != nil {
